--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1024px, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0 auto;
+      max-width: 1920px;
+      min-width: 1024px;
+    }
+  </style>
   <title>Index</title>
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/index.css">
