--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=1024px, initial-scale=1.0">
+  <link type="image/x-icon" sizes="128x128" rel="icon" href="favicon.ico">
   <style>
     body {
       margin: 0 auto;
